# super-opencode

./: .gitignore  README.md  README_zh.md  app.py  loop.py  opencode_runner.py  pyproject.toml  requirements.txt  self_evolution_loop.py  streamlit_stdout.txt  test_python_scanner.py
mcp_server/: AGENTS.md  __init__.py  codehelp.py  hashline.py
mcp_server/codehelp_support/: __init__.py  docstrings.py  examples.py  http.py  packages.py
mcp_server/hashline_support/: __init__.py  autofix.py  core.py  refs.py
plugins/: brevity.ts
services/: app_bootstrap.py  app_shell.py  connectivity.py  job_manager.py  log_ui.py  protocol_ui.py  settings.py  sidebar_ui.py  state_store.py  supervisor_config_builder.py  task_board_ui.py  task_ui.py  wizard_page.py  workspace_cleanup.py
services/config/: opencode_config.py  settings.py  supervisor_config_builder.py
services/jobs/: job_manager.py
services/runtime/: app_bootstrap.py
services/ui/: sidebar_ui.py  task_board_ui.py
supervisor/: __init__.py  archive.py  checkpoint.py  codebase_analyzer.py  config.py  context_monitor.py  credentials_manager.py  llm_supervisor.py  loop.py  meta_protocol_builder.py  opencode_runner.py  opencode_step_detector.py  protocol.py  protocol_analyzer.py  protocol_wizard.py  self_evolution_loop.py  test_runner.py  token_estimator.py  workspace_archiver.py  workspace_guard.py
supervisor/analyzers/: codebase_analyzer.py  opencode_step_detector.py
supervisor/core/: llm_supervisor.py  loop.py  loop_base.py  occam_razor.py  protocol_alignment.py  (+2 more)
vulnerability/: python_scanner.py
(+48 files in other folders)
