[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-supervisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "streamlit>=1.35.0",
    "tiktoken>=0.7.0",
    "pytest>=8.0.0",
    "cryptography>=43.0.0",
    "rich>=14.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["supervisor*"]
